--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,24 +1,18 @@
-#  Template NodeJS build
-
-#  This template allows you to validate your NodeJS code.
-#  The workflow allows running tests and code linting on the default branch.
-
-image: node:16
+image: atlassian/default-image:2
 
 pipelines:
-  default:
-    - parallel:
-        - step:
-            name: Build and Test
-            caches:
-              - node
-            script:
-              - npm install
-              - npm test
-        - step:
-            name: Code linting
-            script:
-              - npm install eslint
-              - npx eslint .
-            caches:
-              - node
+
+  branches:
+    master:
+      - step:
+          name: Deploy to Production
+          deployment: production
+          script:
+            - pipe: atlassian/ftp-deploy:0.3.5
+              variables:
+                USER: $USERNAME
+                PASSWORD: $PASSWORD
+                SERVER: $HOST
+                REMOTE_PATH: /home/kim
+                DELETE_FLAG: 'false' 
+                EXTRA_ARGS: "--exclude=.bitbucket/ --exclude=.git/ --exclude=bitbucket-pipelines.yml --exclude=.gitignore" 
