--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,7 +1,21 @@
 image: atlassian/default-image:2
 
 pipelines:
-
+  custom:
+    run-manual:
+      - step:
+          name: Deploy to Production
+          deployment: production
+          script:
+            - pipe: atlassian/ftp-deploy:0.3.5
+              variables:
+                USER: $USERNAME
+                PASSWORD: $PASSWORD
+                SERVER: $HOST
+                REMOTE_PATH: /home/kim
+                DELETE_FLAG: 'false' 
+                EXTRA_ARGS: "--exclude=.bitbucket/ --exclude=.git/ --exclude=bitbucket-pipelines.yml --exclude=.gitignore" 
+                
   branches:
     development:
       - step:
