--- a/pipeline-crm/package.json
+++ b/pipeline-crm/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue2-datepicker": "^3.10.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
