PC-45-Security: adding authentication to api and changing axios calls on front end

--- a/Pipeline-crm-api/package.json
+++ b/Pipeline-crm-api/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "keycloak-connect": "^17.0.1",
     "mysql": "^2.18.1"
   }
 }
